fix(styling): fix image width on mobile

--- a/src/scss/components/_post-list.scss
+++ b/src/scss/components/_post-list.scss
@@ -64,6 +64,7 @@
   &__thumbnail {
     padding: 1rem 0;
     order: 4;
+    width: 100%;
     object-fit: cover;
     aspect-ratio: 4 / 2;
   }
